@@ -8,6 +8,10 @@
 
         - ドキュメントをリファレンスのツリー形式に統合。
 
+        - マウスの水平ホイールの擬似的な操作をするためのコマンドを追加
+
+            - command_MouseHorizontalWheel
+
     **1.61**
 
         - クリップボード履歴として保存するデータの最大合計サイズを keymap.clipboard_history.quota で設定できるようにした。
